# Yandex_cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  split_vector.cpp  words_brackets.cpp
srs/Algorithms/: A_counter.cpp  Accumulate.cpp  AddStopWords.cpp  CountNames.cpp  Lesson_1_1.cpp  Medianna.cpp  Relevance_Ranging.cpp  Sorting_age.cpp  async_demo.cpp
srs/Dictionary/: Anagram  Anagram.cpp  Birds1.cpp  BuildReversedMap.cpp  Parse_query.cpp  Relevance.cpp
srs/Dictionary/Anagram.dSYM/Contents/: Info.plist
srs/Dictionary/Anagram.dSYM/Contents/Resources/DWARF/: Anagram
srs/OOP/: Task1.cpp  Task2.cpp  Task3.cpp
srs/References/: Final_Constants.cpp  MoveStrings.cpp  Updateifgreater.cpp  read_search.cpp  secrets.cpp
srs/functions/: IsPalindrome.cpp  PalindromeFilter.cpp  SplitIntoWords.cpp  factorial.cpp  relevance_search.cpp  stop_words.cpp  tmp.cpp  uniq_counter.cpp
srs/vectors/: resizing.cpp  split_vector.cpp
