cmake_minimum_required(VERSION 3.17)

project(Yandex_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(split_vector srs/vectors/split_vector.cpp)
add_executable(words_brackets srs/vectors/words_brackets.cpp)
add_executable(resizing srs/vectors/resizing.cpp)
add_executable(IsPalindrome srs/functions/IsPalindrome.cpp)
add_executable(SplitIntoWords srs/functions/SplitIntoWords.cpp)
add_executable(Factorial srs/functions/factorial.cpp srs/References/Updateifgreater.cpp)
add_executable(PalindromeFilter srs/functions/PalindromeFilter.cpp)
add_executable(Uniq_Counter srs/functions/uniq_counter.cpp)
add_executable(Relevance srs/functions/relevance_search.cpp)
add_executable(Stop_Words srs/functions/stop_words.cpp)
add_executable(TMP srs/functions/tmp.cpp)
add_executable(Updateifgreater srs/References/Updateifgreater.cpp)
add_executable(MoveStrings srs/References/MoveStrings.cpp)
add_executable(Final_Const srs/References/Final_Constants.cpp)
add_executable(Secrets srs/References/secrets.cpp)
add_executable(ReadSearch srs/References/read_search.cpp)
add_executable( BuildReversedMap srs/Dictionary/BuildReversedMap.cpp)
