cmake_minimum_required(VERSION 3.17)

project(Yandex_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(Async_demo srs/Algorithms/async_demo.cpp)
add_executable(CountNames srs/Algorithms/CountNames.cpp)
add_executable(Relevane_Ranging srs/Algorithms/Relevance_Ranging.cpp)
#add_executable(StrCat srs/Algorithms/AddStopWords.cpp)
#add_executable(Accum srs/Algorithms/Accumulate.cpp)
#add_executable(Medianna srs/Algorithms/Medianna.cpp)
#add_executable(SortingAge srs/Algorithms/Sorting_age.cpp)
#add_executable(A_count srs/Algorithms/A_counter.cpp)
#add_executable(Algorithm srs/Algorithms/Lesson_1_1.cpp)
#add_exebcutable(Relevance srs/Dictionary/Relevance.cpp)
#add_executable(ParseQuery srs/Dictionary/Parse_query.cpp)
#add_executable(Birds srs/Dictionary/Birds1.cpp)
#add_executable(split_vector srs/vectors/split_vector.cpp)
#add_executable(words_brackets srs/vectors/words_brackets.cpp)
#add_executable(resizing srs/vectors/resizing.cpp)
#add_executable(IsPalindrome srs/functions/IsPalindrome.cpp)
#add_executable(SplitIntoWords srs/functions/SplitIntoWords.cpp)
#add_executable(Factorial srs/functions/factorial.cpp)
#add_executable(PalindromeFilter srs/functions/PalindromeFilter.cpp)
#add_executable(Uniq_Counter srs/functions/uniq_counter.cpp)
#add_executable(Relevance srs/functions/relevance_search.cpp)
#add_executable(Stop_Words srs/functions/stop_words.cpp)
#add_executable(Updateifgreater srs/References/Updateifgreater.cpp)
#add_executable(MoveStrings srs/References/MoveStrings.cpp)
#add_executable(Final_Const srs/References/Final_Constants.cpp)
#add_executable(Secrets srs/References/secrets.cpp)
#add_executable(ReadSearch srs/References/read_search.cpp)
#add_executable(BuildReversedMap srs/Dictionary/BuildReversedMap.cpp)
#add_executable(Anagram srs/Dictionary/Anagram.cpp)


